# AutoTrackCore

./: CMakeLists.txt
source/: CMakeLists.txt
source/frame/: CMakeLists.txt  frame.include.cpp  frame.include.h
source/frame/capture/: capture.bitblt.h  capture.window_graphics.h
source/genshin/: genshin.handle.cpp
source/resource/: version_hash.hash
tests/frame_capture_window_graphics/: CMakeLists.txt  main.cpp
